--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="root"></div>
     
     <!-- Chỗ này là gọi thợ vẽ (React) từ file main.jsx vào làm việc -->
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
+
 </html>
